# prop-teststand

./: .dockerignore  .env  .gitignore  .gitmodules  50ACTUATIONS3KGCOLDFLOWJuly5ColdFlowBasicControl---2025-08-01 23-53-51  CLI_QUICK_REFERENCE.txt  Dockerfile  Dockerfile.logs  Dockerfile.mockdevice  Dockerfile.server  ESP32-01_data.csv  July5ColdFlowBasicControl---2025-07-19 12-02-03  July5ColdFlowBasicControl---2025-07-19 12-45-30  July5ColdFlowBasicControl---2025-07-19 12-55-05  July5ColdFlowBasicControl---2025-07-19 16-23-31  July5ColdFlowBasicControl---2025-07-19 16-29-17  July5ColdFlowBasicControl---2025-07-19 17-17-20  July5ColdFlowBasicControl---2025-07-19 19-22-25  July5ColdFlowBasicControl---2025-07-19 19-23-55  July5ColdFlowBasicControl---2025-07-19 19-30-01  July5ColdFlowBasicControl---2025-07-19 19-33-35  July5ColdFlowBasicControl---2025-07-19 20-05-26  July5ColdFlowBasicControl---2025-07-19 20-06-12  July5ColdFlowBasicControl---2025-07-19 20-11-52  July5ColdFlowBasicControl---2025-07-19 20-36-22  July5ColdFlowBasicControl---2025-07-19 21-54-53  July5ColdFlowBasicControl---2025-07-19 22-32-57  July5ColdFlowBasicControl---2025-07-19 22-32-57.csv  July5ColdFlowBasicControl---2025-08-01 22-24-30  July5ColdFlowBasicControl---2025-08-01 22-28-49  July5ColdFlowBasicControl---2025-08-01 23-17-10  July5ColdFlowBasicControl---2025-08-02 15-33-29  July5ColdFlowBasicControl---2025-08-02 15-39-14  July5ColdFlowBasicControl---2025-08-02 15-46-27  July5ColdFlowBasicControl---2025-08-02 16-10-49  Makefile  PROTOCOL_WALKTHROUGH.md  QDAC_Class.py  README.md  compose.dev.yml  (+16 more)
.github/workflows/: docker-build-amd64.yml  docker-build-arm64.yml  docker-build-dev.yml  docker-build-logs.yml  docker-build-release.yml  docker-build-server.yml  docker-build.yml  run-tests.yml
FullTestCode/: Nikhil_data_analysis.py  QDAC_Class.py  displayData.py  fullControl.py
FullTestCode/sensors/: loadCell.py  pressureTransducer.py  thermocouple.py
FullTestCode/valves/: valve.py
TestingData/: configFramework.json  firstControlTest.json  teighinConfig.json
TestingData/ControlTesting/: First Control Test.json
data/: configFramework.json  firstControlTest.json
esp32/onboard/: ADS112C04.py  AsyncManager.py  REPLTools.py  TCPHandler.py  UDPListener.py  boot.py  main.py  wifi_tools.py  writeAndReset.bat
esp32/onboard/configs/: ESPConfig.json  ESPConfig_Template.json
esp32/onboard/sensors/: LoadCell.py  PressureTransducer.py  Thermocouple.py
libqretprop/: GuiDataStream.py  _build_qlcp.py  config.py  configManager.py  config_manager.py  fullControl.py  gui_data_stream.py  legacy_gui_logging.py  mumbleRecording.py  mumble_recording.py  mylogging.py  protocol.py  redis_logging.py  server.py
libqretprop/API/: fastAPI.py
libqretprop/DeviceControllers/: CommManager.py  DeviceSearcher.py  cameraConfig.py  cameraTools.py  deviceTools.py  discoveryTools.py  kasaTools.py  searchTools.py
libqretprop/DeviceMonitoring/: deviceHealthStore.py
libqretprop/Devices/: Camera.py  Control.py  ESPDevice.py  SensorMonitor.py  Valve.py
libqretprop/Devices/sensors/: Current.py  LoadCell.py  PressureTransducer.py  Resistance.py  Thermocouple.py
libqretprop/ESPObjects/: DeviceSearcher.py  testConnect.py
libqretprop/ESPObjects/ESPDevice/: ESPDevice.py
libqretprop/ESPObjects/SensorMonitor/: SensorMonitor.py
libqretprop/LJM_archive/: displayData.py  extractData.py  fullControl.py
libqretprop/LJM_archive/LJM_sensors/: loadCell.py  thermocouple.py
libqretprop/api/: deps.py  fastAPI.py  fast_api.py  models.py  security.py
libqretprop/api/routers/: audio.py  cameras.py  devices.py  kasa.py  streams.py  system.py
libqretprop/daemons/: cliTerminal.py  cli_terminal.py
libqretprop/device_controllers/: cameraTools.py  camera_tools.py  deviceTools.py  kasaTools.py  kasa_tools.py
libqretprop/devices/: Camera.py
libqretprop/drivers/: __init__.py  camera.py  esp.py
libqretprop/esp32/interface/: testConnect.py
libqretprop/esp32/onboard/: boot.py  hostWebServer  main.py  wifi_tools.py  writeAndReset.bat
libqretprop/esp32interface/: DeviceSearcher.py
libqretprop/esp32interface/ESPDevice/: ESPDevice.py
libqretprop/esp32interface/SensorMonitor/: SensorMonitor.py
libqretprop/esp32interface/sensors/: LoadCell.py  PressureTransducer.py  Thermocouple.py
libqretprop/integrations/: mediamtx.py
libqretprop/qlcp/: __init__.py  _bindings.py  config_models.py  config_parser.py  constants.py  decoding.py  enums.py  errors.py  framing.py  native.py  packets.py  sequence.py
libqretprop/runtime/: __init__.py  audio_runtime.py  camera_runtime.py  command_tracker.py  command_types.py  device_registry.py  discovery.py  esp_connection_runtime.py  esp_device_session.py  kasa_runtime.py  log_stream.py  logging.py  metrics.py  services.py  state_stream.py  telemetry_display_stream.py  telemetry_ingest.py  telemetry_stream.py  ws_fanout.py
libqretprop/sensors/: loadCell.py
libqretprop/state/: __init__.py  models.py  system_state.py
prop_teststand/: Nikhil_data_analysis.py  fullControl.py
prop_teststand/sensors/: pressureTransducer.py
qretproptools/camera/write_cam_config/: __init__.py  write_cam_config.py
qretproptools/cli/deviceSimulator/: SimAsyncManager.py  SimESPConfig.json  SimTCPHandler.py  SimUDPListener.py  sim_device.py
qretproptools/gui/: GuiDataStream.py
scripts/: build_qlcp.py  expand_qlcp_header.sh
src/: fullControl.py
src/valves/: valve.py
tests/integration/: conftest.py  test_mock_device_integration.py
tests/unit/: conftest.py  test_api_metrics.py  test_command_router.py  test_command_tracker.py  test_device_runtimes.py  test_device_tools_lifecycle.py  test_discovery.py  test_esp_connection_listener.py  test_esp_connection_runtime.py  test_esp_device_session.py  test_esp_driver.py  test_heartbeat_ack.py  test_log_stream.py  test_metrics.py  test_mock_device.py  test_protocol.py  test_qlcp_config_parser.py  test_state_stream.py  test_system_state.py  test_telemetry_display_stream.py  test_telemetry_ingest.py  test_telemetry_stream.py  test_telemetry_udp_listener.py
(+21 files in other folders)
