[project]
name = "prop-teststand"
version = "0.1.0"
authors = [
    {name = "Noah Warren"}
]
requires-python = ">=3.11"

dependencies = [
    # Running requirements
    "colorama",
    "labjack-ljm",
    "numpy",
    "pyqtgraph",
    "keyboard",
    "types-keyboard",
    "redis",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0", # Essential for websockets
    "aioconsole>=0.8.1",
    "aiohttp>=3.13.2",
    "pyyaml>=6.0.3",
    "onvif-zeep-async>=4.0.4",
]

[dependency-groups]
dev = [
    "ruff",
    "uv",
    "mypy",
    "matplotlib", # needed for plotting test data
    "ipykernel", # needed for jupyter
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
gui = [
  "PySide6",
  "PySide6-stubs",
]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["libqretprop", "qretproptools"]
module-root = ""

[project.scripts]
# CLI TOOLS
find_devices = "qretproptools.cli.find_devices.find_devices:main"
direct_tcp = "qretproptools.cli.direct_tcp.direct_tcp:main"
sim_device = "qretproptools.cli.deviceSimulator.sim_device:main"
see_logs = "qretproptools.cli.see_logs.see_logs:main"
start_server = "qretproptools.cli.start_server.start_server:main"
mock_device = "qretproptools.cli.mock_device.mock_device:main"

[project.gui-scripts]
# GUI TOOLS
hello_gui = "qretproptools.gui.hello_gui.hello_gui:main"
full_gui =  "qretproptools.gui.full_Gui.full_Gui:main"
multi_plot = "qretproptools.gui.full_Gui.test_multi_plot:main"

[tool.mypy]
strict = false
ignore_missing_imports = true
exclude = "libqretprop/LJM_archive/"

[tool.mypy-plotly]
ignore_missing_imports = true

[tool.pyright]
reportMissingTypeStubs=false   # pyqtgraph has issues
reportPrivateUsage=false       # Leave this to ruff
reportUnknownMemberType=false  # WAY too many problems with PySide6 and pyqtgraph to have this on
