[project]
name = "prop-teststand"
version = "0.1.0"
authors = [
    {name = "Noah Warren"}
]
requires-python = ">=3.12"

dependencies = [
    # Running requirements
    "colorama",
    "labjack-ljm",
    "numpy",
    "pyqtgraph",
    "keyboard",
    "types-keyboard",
    "redis",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0", # Essential for websockets
    "aioconsole>=0.8.1",
    "aiohttp>=3.13.2",
    "pyyaml>=6.0.3",
    "onvif-zeep-async>=4.0.4",
    "python-kasa>=0.10.2",
    "opuslib>=3.0.1",
    "pymumble",
]

[dependency-groups]
dev = [
    "ruff",
    "uv",
    "mypy",
    "matplotlib", # needed for plotting test data
    "ipykernel", # needed for jupyter
    "pydantic>=2.11.7",
]

[tool.uv]
reinstall-package = ["prop-teststand"]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "hatch_build.py" },
    { file = "qlcp/CMakeLists.txt" },
    { file = "qlcp/src/**/*.c" },
    { file = "qlcp/src/**/*.h" },
    { file = "qlcp/include/**/*.h" },
    { file = "qlcp/cmake/**/*.cmake" },
    { file = "qlcp/cmake/**/*.in" },
]

[build-system]
requires = ["hatchling>=1.27.0", "cffi>=2.0.0", "setuptools>=82.0.1"]
build-backend = "hatchling.build"

[tool.uv.sources]
pymumble = { git = "https://git.sr.ht/~oopsbagel/pymumble" }

[project.scripts]
# CLI TOOLS
find_devices = "qretproptools.cli.find_devices.find_devices:main"
direct_tcp = "qretproptools.cli.direct_tcp.direct_tcp:main"
sim_device = "qretproptools.cli.deviceSimulator.sim_device:main"
see_logs = "qretproptools.cli.see_logs.see_logs:main"
start_server = "qretproptools.cli.start_server.start_server:main"
mock_device = "qretproptools.cli.mock_device.mock_device:main"

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.mypy-plotly]
ignore_missing_imports = true

[tool.pyright]
reportMissingTypeStubs=false   # pyqtgraph has issues
reportPrivateUsage=false       # Leave this to ruff
reportUnknownMemberType=false  # WAY too many problems with PySide6 and pyqtgraph to have this on

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["libqretprop", "qretproptools"]
exclude = [
    "/libqretprop/_lib/qlcp_lib_expanded.h",
    "/libqretprop/_protocol/_qlcp.c",
    "/libqretprop/_protocol/*.o",
]
artifacts = [
    "/libqretprop/_lib/libqlcp.so",
    "/libqretprop/_protocol/__init__.py",
    "/libqretprop/_protocol/_qlcp*.so",
    "/libqretprop/_protocol/_qlcp.pyi",
]

[tool.hatch.build.targets.sdist]
include = [
    "/hatch_build.py",
    "/pyproject.toml",
    "/README.md",
    "/libqretprop",
    "/qretproptools",
    "/qlcp",
]
exclude = [
    "/libqretprop/_lib",
    "/libqretprop/_protocol",
    "/qlcp/build",
]
