[project]
name = "prop-teststand"
dynamic = ["version"]
authors = [
    {name = "Noah Warren"}
]
requires-python = ">=3.12"

dependencies = [
    # Running requirements
    "colorama",
    "labjack-ljm",
    "numpy",
    "pyqtgraph",
    "keyboard",
    "types-keyboard",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0", # Essential for websockets
    "websockets>=16.0",
    "aioconsole>=0.8.1",
    "aiohttp>=3.13.2",
    "pyyaml>=6.0.3",
    "onvif-zeep-async>=4.0.4",
    "python-kasa>=0.10.2",
    "opuslib>=3.0.1",
    "pymumble",
    "pytest>=9.0.2",
    "tsdownsample>=0.1.5.1",
]

[dependency-groups]
dev = [
    "ruff",
    "uv",
    "hatch-vcs",
    "mypy",
    "matplotlib", # needed for plotting test data
    "ipykernel", # needed for jupyter
    "pydantic>=2.11.7",
]

[tool.uv]
reinstall-package = ["prop-teststand"]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "hatch_build.py" },
    { file = "ctl-qlcp-lib/CMakeLists.txt" },
    { file = "ctl-qlcp-lib/src/**/*.c" },
    { file = "ctl-qlcp-lib/src/**/*.h" },
    { file = "ctl-qlcp-lib/include/**/*.h" },
    { file = "ctl-qlcp-lib/cmake/**/*.cmake" },
    { file = "ctl-qlcp-lib/cmake/**/*.in" },
]

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs", "cffi>=2.0.0", "setuptools>=82.0.1"]
build-backend = "hatchling.build"

[tool.uv.sources]
pymumble = { git = "https://git.sr.ht/~oopsbagel/pymumble" }

[project.scripts]
# CLI TOOLS
start_server = "qretproptools.cli.start_server.start_server:main"
mock_device = "qretproptools.cli.mock_device.mock_device:main"

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.mypy-plotly]
ignore_missing_imports = true

[tool.pyright]
reportMissingTypeStubs=false   # pyqtgraph has issues
reportPrivateUsage=false       # Leave this to ruff
reportUnknownMemberType=false  # WAY too many problems with PySide6 and pyqtgraph to have this on

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.version]
source = "vcs"
fallback-version = "0+unknown"

[tool.hatch.build.hooks.vcs]
version-file = "libqretprop/_version.py"
template = """
from __future__ import annotations

# file generated by vcs-versioning
# don't change, don't track in version control

__all__ = [
    "__version__",
    "__version_tuple__",
    "version",
    "version_tuple",
    "__commit_id__",
    "commit_id",
]

version: str
__version__: str
__version_tuple__: tuple[int | str, ...]
version_tuple: tuple[int | str, ...]
commit_id: str | None
__commit_id__: str | None

__version__ = version = {version!r}
__version_tuple__ = version_tuple = {version_tuple!r}

__commit_id__ = commit_id = {scm_version.short_node!r}
"""

[tool.hatch.build.targets.wheel]
packages = ["libqretprop", "qretproptools"]
exclude = [
    "/libqretprop/_lib/qlcp_lib_expanded.h",
    "/libqretprop/_protocol/_qlcp.c",
    "/libqretprop/_protocol/*.o",
]
artifacts = [
    "/libqretprop/_lib/libqlcp.so",
    "/libqretprop/_protocol/__init__.py",
    "/libqretprop/_protocol/_qlcp*.so",
    "/libqretprop/_protocol/_qlcp.pyi",
]

[tool.hatch.build.targets.sdist]
include = [
    "/hatch_build.py",
    "/pyproject.toml",
    "/README.md",
    "/libqretprop",
    "/qretproptools",
    "/ctl-qlcp-lib",
]
exclude = [
    "/libqretprop/_lib",
    "/libqretprop/_protocol",
    "/ctl-qlcp-lib/build",
]
